--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=RevConnect
 
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/revconnect
+spring.datasource.url=jdbc:mysql://localhost:3306/revconnect1
 spring.datasource.username=root
 spring.datasource.password=Vasanth19!@#
 
@@ -9,3 +9,6 @@ spring.datasource.password=Vasanth19!@#
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+
+#Log4J
+logging.config=classpath:log4j2.xml
